--- a/vibrate_detect/app/src/main/AndroidManifest.xml
+++ b/vibrate_detect/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".AnswerActivity"
-            android:label="@string/title_activity_answer"></activity>
+            android:label="@string/title_activity_answer" />
+        <activity android:name=".MailActivity"></activity>
     </application>
 
 </manifest>
